test/tests/PostconditionAtPreInAtPre.expected
PostconditionAtPreInAtPre.panda:2:16: error: cannot use @pre inside @pre
1 error
